Eslint initial config

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 <body>
   <div id="slider" class="slider">
     <a id="prev" class="control prev"></a>
-    <div class="wrapper">
-      <div id="slides" class="slides">
+    <div id="window">
+      <div id="wrapper">
         <span class="slide">Slide 1</span>
         <span class="slide">Slide 2</span>
         <span class="slide">Slide 3</span>
