--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,8 @@
 
 <body>
   <div id="slider" class="slider">
-    <a id="prev" class="control prev"></a>
-    <div id="window">
-      <div id="wrapper">
+    <div class="wrapper">
+      <div id="slides" class="slides">
         <span class="slide">Slide 1</span>
         <span class="slide">Slide 2</span>
         <span class="slide">Slide 3</span>
@@ -19,6 +18,7 @@
         <span class="slide">Slide 5</span>
       </div>
     </div>
+    <a id="prev" class="control prev"></a>
     <a id="next" class="control next"></a>
   </div>
 </body>
