--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="slider" class="slider">
-    <a id="prev" class="control prev"></a>
+    <button id="prev" class="control prev"></button>
     <div class="wrapper">
       <div id="slides" class="slides">
         <span class="slide">Slide 1</span>
@@ -19,7 +19,7 @@
         <span class="slide">Slide 5</span>
       </div>
     </div>
-    <a id="next" class="control next"></a>
+    <button id="next" class="control next"></button>
   </div>
 </body>
 
