--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-  <div id="slider" class="slider">
-    <div class="wrapper">
-      <div id="slides" class="slides">
+  <div id="container" class="view">
+    <div id="view" class="view">
+      <div id="wrapper" class="wrapper">
         <span class="slide">Slide 1</span>
         <span class="slide">Slide 2</span>
         <span class="slide">Slide 3</span>
