--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,14 @@
         <span class="slide">Slide 3</span>
         <span class="slide">Slide 4</span>
         <span class="slide">Slide 5</span>
+        <span class="slide">Slide 6</span>
+        <span class="slide">Slide 7</span>
+        <span class="slide">Slide 8</span>
+        <span class="slide">Slide 9</span>
       </div>
     </div>
   </div>
 </body>
 
-<script src="./js/class-script.js"></script>
+<script src="./js/factory-script.js"></script>
 </html>
