Solving script bugs

--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
         <span class="slide">Slide 7</span>
         <span class="slide">Slide 8</span>
         <span class="slide">Slide 9</span>
+        <span class="slide">Slide 10</span>
       </div>
     </div>
   </div>
