--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-  <div id="container" class="view">
-    <div id="view" class="view">
-      <div id="wrapper" class="wrapper">
+  <div id="container">
+    <div id="view">
+      <div id="wrapper">
         <span class="slide">Slide 1</span>
         <span class="slide">Slide 2</span>
         <span class="slide">Slide 3</span>
@@ -21,6 +21,22 @@
         <span class="slide">Slide 8</span>
         <span class="slide">Slide 9</span>
         <span class="slide">Slide 10</span>
+      </div>
+    </div>
+  </div>
+  <div id="container-2">
+    <div id="view-2">
+      <div id="wrapper-2">
+        <span class="slide-2">Slide 1</span>
+        <span class="slide-2">Slide 2</span>
+        <span class="slide-2">Slide 3</span>
+        <span class="slide-2">Slide 4</span>
+        <span class="slide-2">Slide 5</span>
+        <span class="slide-2">Slide 6</span>
+        <span class="slide-2">Slide 7</span>
+        <span class="slide-2">Slide 8</span>
+        <span class="slide-2">Slide 9</span>
+        <span class="slide-2">Slide 10</span>
       </div>
     </div>
   </div>
